--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <section>
 
-        <img src="images/mery.png" alt="">
+        <img src="mery.png" alt="">
 
         <div class="étude">
             <h2>ETUDES</h2>
@@ -36,9 +36,9 @@
 
         <div class="logos">
 
-            <a href="https://www.github.com/khlifa-meryem/" target=_blank><img src="images/git.png" alt=""></a>
-            <a href="https://www.facebook.com/meryam.khalifa/" target=_blank><img src="images/face.png" alt=""></a>
-            <a href="https://www.instagram.com/meryem_khalifa/?r=nametag" target=_blank><img src="images/insta.png" alt=""></a>
+            <a href="https://www.github.com/khlifa-meryem/" target=_blank><img src="git.png" alt=""></a>
+            <a href="https://www.facebook.com/meryam.khalifa/" target=_blank><img src="face.png" alt=""></a>
+            <a href="https://www.instagram.com/meryem_khalifa/?r=nametag" target=_blank><img src="insta.png" alt=""></a>
 
         </div>
 
